      the TEMPLATE order information is now stored with the other faction
      details (like TIMES), in the "players" file, like so:
      Template: {off|short|long|map}
      It is left to the server to handle this item (much like the
      "SendTimes:" item in the "players" file).  During turn run, there will
      be two files produced for each faction ID:  report.ID, and template.ID .
      In cases where "off" was chosen, a "short" report will be produced
      for the faction (thus allowing your server to propagate a set of
      orders automatically [if you do that sort of thing] to the next
      turn).
   -- Fixed bug in generation of extremely large and extremely small worlds
      and levels.  Second bug was introduced by artic towns patch.
   -- Fixed bug in movement costs when WEATHER_EXISTS was 0
   -- Fixed the broken 'faction: newNoLeader' and 'startLoc:' directives.
      'Faction: new' now takes some additional parameters on the data line
	  so you can say 'Faction: new' (create a normal faction),
	  'Faction: new 10 10 1' (create a normal faction but put the initial
      leader in location 10,10,1 instead of nexus) or 'Faction: new noleader'
	  (you can also use 'Faction: new noleader 10 10 1') which will
	  create a leaderless faction (with the location if specified).  And
	  you can then use the newUnit/Item/Skill commands to customize that
	  unit exactly as you want.
   -- Fixed bug where nexus was an odd number of regions in multi-hex nexus.
      (courtesy of Ben Lloyd)
   -- Fixed a divide by zero bug in calculating population.  (courtesy of
	  Ben Lloyd)
   -- Fixed bug where monfaction and guardfaction were not being initialized
      correctly and another where monfaction was being called as faction 2
	  hardcoded (courtesy of Ben Lloyd)
   -- Fixed RunPortalLore to actually use GetTargetInRange() rather than
      calling GetDist() directly.
   -- Added "number of days taught" to output from study.